Bug 387403 - Unable to open pgm and ppm files with comments
Summary: Unable to open pgm and ppm files with comments
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 3.1.1
Platform: Debian stable Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-28 14:34 UTC by Pinak
Modified: 2017-11-28 21:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
an example pgm image that has comments in it (256.04 KB, image/x-portable-graymap)
2017-11-28 14:34 UTC, Pinak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pinak 2017-11-28 14:34:42 UTC
Created attachment 109095 [details]
an example pgm image that has comments in it

Krita is unable to open pgm (P5) or ppm (P6) files that have comments in the header. Gimp on the other hand can. Please make sure to read/skip comments when opening the files
Comment 1 Halla Rempt 2017-11-28 15:15:57 UTC
Git commit 0b964f76ba98461afd6891cd1d5f071734b0fd4d by Boudewijn Rempt.
Committed on 28/11/2017 at 15:15.
Pushed by rempt into branch 'master'.

Skip comments, also for binary netpbm files

M  +4    -0    plugins/impex/ppm/kis_ppm_import.cpp

https://commits.kde.org/krita/0b964f76ba98461afd6891cd1d5f071734b0fd4d
Comment 2 Halla Rempt 2017-11-28 15:17:59 UTC
Git commit 83514493a1c5105f06ab1f35760b3136618ac9e7 by Boudewijn Rempt.
Committed on 28/11/2017 at 15:15.
Pushed by rempt into branch 'krita/3.3'.

Skip comments, also for binary netpbm files

M  +4    -0    plugins/impex/ppm/kis_ppm_import.cpp

https://commits.kde.org/krita/83514493a1c5105f06ab1f35760b3136618ac9e7
Comment 3 Victor Wåhlström 2017-11-28 21:35:47 UTC
Git commit a0624f31a0cb78f9520dce52428c18b0769e8b06 by Victor Wåhlström.
Committed on 28/11/2017 at 21:33.
Pushed by victorw into branch 'master'.

Fix compile error in KisPPMImport::convert()

M  +2    -2    plugins/impex/ppm/kis_ppm_import.cpp

https://commits.kde.org/krita/a0624f31a0cb78f9520dce52428c18b0769e8b06