Skip comments, also for binary netpbm files

BUG:387403